--- a/flags/page.html
+++ b/flags/page.html
@@ -6,6 +6,7 @@
 	<div class="all-flags">
 	
 		<div class="flag-wrap">
+			<div class="shade"></div>
 			<div class="canada">
 				<div class="canada__red-bord"></div>
 				<img src="svg/canada.svg" class="canada__leaf-icon">
@@ -14,6 +15,7 @@
 		</div>
 		
 		<div class="flag-wrap">
+			<div class="shade"></div>
 			<div class="jp">
 				<div class="jp__red-dot">
 				</div>
@@ -21,6 +23,7 @@
 		</div>
 		
 		<div class="flag-wrap">
+			<div class="shade"></div>
 			<div class="ussr">
 				<img class="ussr__serp-molot" src="svg/ussr.svg">
 			</div>
